# MovieFilterPro

./: .dockerignore  .geminiignore  .gitignore  ABOUT.md  Dockerfile  Makefile  Pipfile  README.md  _nginx.conf_  bg.html  classes.py  countries.yaml  entrypoint.sh  fix_rating_10.py  fly.toml  gemini.md  manage.py  manual_migrate.py  nginx.conf  parse.py  pyproject.toml  read_country.py  requirements.txt  restore_kinorium_data.py  run_daphne_debug.py  test_parse_detail.py  tst.py  tst.torrent
core/: auth.py  forms.py  models.py  urls.py  views.py
core/templates/: base.html  header.html  login.html  preferences_update_form.html  register.html  testing.html
docs/: LOGGING.md  WEBSOCKET-LOGGING.md
firebase_adapter/: client.py  movielists.py  movies.py  test_lists.py  test_movies.py
fixtures/: auth.Group.json  kinozal.Country.json  moviefilter.Country.json
kinol_dooble/: asgi.py  settings.py  urls.py  wsgi.py
kinorium/: classes.py  forms.py  htmx_views.py  parse_csv.py  urls.py  util.py  views.py
kinorium/templates/: kinorium-table.html
kinozal/: admin.py  apps.py  checks.py  classes.py  forms.py  models.py  parse.py  urls.py  util.py  views.py
kinozal/middleware/: toast_middleware.py
kinozal/migrations/: 0001_initial.py  0002_kinoriummovie_kinozal_original_title_and_more.py  0003_alter_kinoriummovie_kinozal_original_title_and_more.py  0004_alter_userpreferences_last_scan.py  0005_userpreferences_countries_userpreferences_genres_and_more.py  0006_alter_userpreferences_countries_and_more.py  0014_alter_movierss_year.py  (+14 more)
kinozal_parse/: asgi.py  settings.py  urls.py  wsgi.py
kinozal_scan/: checks.py  deleting_since_date.py  exceptions.py  htmx_views.py  parse.py  runtime.py  service.py  urls.py  util.py  views.py
movie_filter_pro/: asgi.py  settings.py  urls.py  wsgi.py
moviefilter/: admin.py  apps.py  auth.py  checks.py  classes.py  consumers.py  context_processors.py  deleting_since_date.py  forms.py  htmx_views.py  image_caching.py  models.py  parse.py  parse_csv.py  plex.py  routing.py  service.py  telegram_bot.py  testing.py  urls.py  util.py  views.py  views_htmx.py  weblogger.py  websocket_consumers.py
old/: parse_detail.py
one_time_scripts/: deleting_since_date.py  fix_rating_10.py  manual_scan.py  restore_kinorium_data.py  test_parse_detail.py
plex/: apps.py  urls.py  views.py
remote_QNAP/: README.md  docker-compose.yml
sample_detail_pages/: Day_of_Reckoning.html  Fat_Man_and_Little_Boy.html  Kovcheg.html
static/: dialog.js  style.scss  toasts.js
tmdb/: apps.py  urls.py  views.py
tmdb_adapter/: apps.py  auth.py  client_singleton.py  tmdb_singleton.py  urls.py  views.py
vault/: README.md  admin.py  apps.py  models.py  urls.py  views.py
web_logger/: __init__.py  htmx_views.py  urls.py  weblogger.py  websocket_consumers.py
(+101 files in other folders)
