[project]
name = "moviefilterpro"
version = "0.1.19"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.2",
    "channels>=4.2.0",
    "crispy-bootstrap5>=2024.10",
    "daphne>=4.1.2",
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "django-compressor>=4.5.1",
    "django-crispy-forms>=2.3",
    "django-htmx>=1.21.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "plexapi>=4.16.1",
    "python-decouple>=3.8",
    "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.17.0",
    "django-debug-toolbar>=5.0.1",
]

[tool.bumpversion]
current_version = "0.1.19"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
