[project]
name = "moviefilterpro"
version = "0.1.68"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.2",
    "channels>=4.2.0",
    "crispy-bootstrap5>=2024.10",
    "daphne>=4.1.2",
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "django-compressor>=4.5.1",
    "django-crispy-forms>=2.3",
    "django-htmx>=1.21.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "plexapi>=4.16.1",
    "python-decouple>=3.8",
    "starlette>=0.47.0",
    "whitenoise>=6.8.2",
]
